--- a/index.html
+++ b/index.html
@@ -1,74 +1,181 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Miniport by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
+	<head>
+		<title>Medrano Veterinary Services</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.scrolly.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+	</head>
+	<body>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Medranovets.github.io : ">
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					<li><a href="#how_it_works">How it Works</a></li>
+					<li><a href="#dr_rob">Meet Dr. Marcia</a></li>
+					<li><a href="#services">Our Services</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+		<!-- Home -->
+			<div class="wrapper style1 first">
+				<article class="container" id="top">
+					<div class="row">
+						<div class="6u">
+							<span class="image fit"><img src="images/medrano3.jpg" alt="" /></span>
+						</div>
+						<div class="6u">
+							<header>
+								<h1><strong>Medrano Veterinary Services</strong></h1>
+							</header>
+							<p style='font-size: 1.75em'>Vet care without lifting a paw!</p>
+							<a href="#contact" class="button scrolly" style='margin-right: 10px'>Email Dr. Marcia</a>
+							<a href="#contact" class="button green scrolly">Call Dr. Marcia</a>
 
-    <title>Medranovets.github.io</title>
-  </head>
+						</div>
+					</div>
+				</article>
+			</div>
 
-  <body>
+		<!-- How it Works -->
+			<div class="wrapper style3">
+				<article id="how_it_works">
+					<header>
+						<h2>How it Works</h2>
+					</header>
+					<div class="container">
+						<div class="row">
+							<div class="3u">
+								<section class="box style1">
+									<h3>Schedule a visit</h3>
+									<p>Call or email to schedule a home visit.<br/><br/></p>
+								</section>
+							</div>
+							<div class="3u">
+								<section class="box style1">
+									<h3>We come to you</h3>
+									<p>Our vets treat your dog, play with toys and give belly rubs.</p>
+								</section>
+							</div>
+							<div class="3u">
+								<section class="box style1">
+									<h3>Access records</h3>
+									<p>All of your records are readily available when you need them.</p>
+								</section>
+							</div>
+							<div class="3u">
+								<section class="box style1">
+									<h3>Get reminders</h3>
+									<p>We'll let you know when your pup needs a checkup.<br/><br/></p>
+								</section>
+							</div>
+						</div>
+					</div>
+				</article>
+			</div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/MedranoVets">View on GitHub</a>
+		<!-- Portfolio -->
+			<div class="wrapper style2">
+				<article id="dr_rob">
+					<header>
+						<h2>Meet Dr. Marcia, VMD</h2>
+					</header>
+					<div class="container">
+						<div class="row">
+							<div class="4u">
+								<article class='box style2'>
+									<a href="#" class="image featured"><img src="images/medrano4.jpg" alt="" /></a>
+								</article>
+							</div>
+							<div class="4u">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/medrano1.jpg" alt="" /></a>
+								</article>
+							</div>
+							<div class="4u">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/medrano2.jpg" alt="" /></a>
+								</article>
+							</div>
+						</div>
+					</div>
+				</article>
+			</div>
 
-          <h1 id="project_title">Medranovets.github.io</h1>
-          <h2 id="project_tagline"></h2>
+			<!-- Services -->
+			<div class="wrapper style3">
+				<article id="services">
+					<header>
+						<h2>Services</h2>
+					</header>
+					<div class="container">
+						<div class="row">
+							<div class="6u">
+								<section class="box style1">
+									<h3 style='text-align: left; color: #43B3E0'>House Call: $199</h3>
+									<p style='padding: 0px; margin: 0px; text-align: left; margin-left: 60px; font-weight: bold'>Includes:</p>
+									<ul class='left check'>
+										<li>Physical exam</li>
+										<li>All vaccines</li>
+										<li>Ear cleaning</li>
+										<li>Nail clipping</li>
+										<li>Unlimited Q&A</li>
+									</ul>
+								</section>
+							</div>
+							<div class="6u">
+								<section class="box style1">
+									<h3 style='text-align: left; color: #43B3E0'>Diagnostics: Additional cost</h3>
+									<ul class='left check'>
+										<li>Fecal</li>
+										<li>Blood work</li>
+										<li>Urinalysis</li>
+										<li>Blood pressure</li>
+										<li>Skin cytology</li>
+										<li>Ear cytology</li>
+									</ul>
+								</section>
+							</div>
+						</div>
+					</div>
+				</article>
+			</div>
 
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+		<!-- Contact -->
+			<div class="wrapper style4">
+				<article id="contact" class="container small">
+					<header>
+						<h2>Contact</h2>
+					</header>
+					<div>
+						<div class="row">
+							<div class="12u" style='text-align: center'>
+								<p>Covering San Francisco<p>
+								<p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p>
+								<p style='color: #84b123; font-weight: bold'>DocMarcia@MedranoVets.com</p>
+							</div>
+						</div>
+				</article>
+			</div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+	</body>
 </html>
