--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#how_it_works">How it Works</a></li>
-					<li><a href="#dr_rob">Meet Dr. Marcia</a></li>
+					<li><a href="#dr_marcia">Meet Dr. Marcia</a></li>
 					<li><a href="#services">Our Services</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -94,9 +94,12 @@
 
 		<!-- Portfolio -->
 			<div class="wrapper style2">
-				<article id="dr_rob">
+				<article id="dr_marcia">
 					<header>
 						<h2>Meet Dr. Marcia, VMD</h2>
+						<p>Dr. Marcia graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
+						<p>She has over 6 years of experience and is the proud parent of Guille the Rat Terrier.</p>
+
 					</header>
 					<div class="container">
 						<div class="row">
@@ -117,6 +120,10 @@
 							</div>
 						</div>
 					</div>
+					<header>
+						<p style='padding: 0 30px; font-size: 1em; font-style: italic'> "Dr. Marcia and Megan were AMAZING!  Prompt, thorough, so loving and kind, and obviously very very good at what they do." - Naomi L.</p>
+
+					</header>
 				</article>
 			</div>
 
@@ -169,7 +176,7 @@
 					<div>
 						<div class="row">
 							<div class="12u" style='text-align: center'>
-								<p>Covering San Francisco<p>
+								<p>Covering San Francisco, East Bay and Marin<p>
 								<p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p>
 								<p style='color: #84b123; font-weight: bold'>DocMarcia@MedranoVets.com</p>
 							</div>
