added shop link

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					<li><a href="#dr_marcia">Meet Dr. Marcia</a></li>
 					<li><a href="#services">Our Services</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href='http://medranovets.vetsfirstchoice.com/'>Shop</a><li>
 				</ul>
 			</nav>
 
