--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Medrano Veterinary Services</title>
+		<title>MEDVETS</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -20,6 +20,8 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
+		<!-- Favicon -->
+		<link rel="icon" href="" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
@@ -30,6 +32,7 @@
 				<ul class="container">
 					<li><a href="#how_it_works">How it Works</a></li>
 					<li><a href="#dr_marcia">Meet Dr. Marcia</a></li>
+					<li><a href="#Megan">Meet Megan</a></li>
 					<li><a href="#services">Our Services</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href='http://medranovets.vetsfirstchoice.com/'>Shop</a><li>
@@ -48,7 +51,7 @@
 								<h1><strong>Medrano Veterinary Services</strong></h1>
 							</header>
 							<p style='font-size: 1.75em'>Vet care without lifting a paw!</p>
-							<a href="#contact" class="button scrolly" style='margin-right: 10px'>Email Dr. Marcia</a>
+							<a href="#contact" class="button" style='margin-right: 10px' >Email Dr. Marcia</a>
 							<a href="#contact" class="button green scrolly">Call Dr. Marcia</a>
 
 						</div>
@@ -67,7 +70,7 @@
 							<div class="3u">
 								<section class="box style1">
 									<h3>Schedule a visit</h3>
-									<p>Call or email to schedule a home visit.<br/><br/></p>
+									<p>Email, text, or call to schedule a home visit.<br/><br/></p>
 								</section>
 							</div>
 							<div class="3u">
@@ -79,13 +82,13 @@
 							<div class="3u">
 								<section class="box style1">
 									<h3>Access records</h3>
-									<p>All of your records are readily available when you need them.</p>
+									<p>All of your records are readily available in the cloud when you need them.</p>
 								</section>
 							</div>
 							<div class="3u">
 								<section class="box style1">
 									<h3>Get reminders</h3>
-									<p>We'll let you know when your pup needs a checkup.<br/><br/></p>
+									<p>We'll let you know when your pet needs a checkup.<br/><br/></p>
 								</section>
 							</div>
 						</div>
@@ -97,9 +100,44 @@
 			<div class="wrapper style2">
 				<article id="dr_marcia">
 					<header>
-						<h2>Meet Dr. Marcia, VMD</h2>
+						<h2>Meet Dr. Marcia Medrano</h2>
 						<p>Dr. Marcia graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
-						<p>She has over 6 years of experience and is the proud parent of Guille the Rat Terrier.</p>
+						<p>She has over 8 years of experience and is the proud parent of Guille the Rat Terrier and Lola the Tabby.</p>
+
+					</header>
+					<div class="container">
+						<div class="row">
+							<div class="4u">
+								<article class='box style2'>
+									<a href="#" class="image featured"><img src="images/medrano4.jpg" alt="" /></a>
+									<p>"Dr. Marcia and Megan were AMAZING!  Prompt, thorough, so loving and kind, and obviously very very good at what they do."</p>
+									<p style='text-align: right;'> - Naomi L.</p>
+								</article>
+							</div>
+							<div class="4u">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/medrano1.jpg" alt="" /></a>
+								</article>
+							</div>
+							<div class="4u">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/medrano2.jpg" alt="" /></a>
+								</article>
+							</div>
+						</div>
+					</div>
+					<header>
+						<p style='padding: 0 30px; font-size: 1em; font-style: italic'> "Dr. Marcia and Megan were AMAZING!  Prompt, thorough, so loving and kind, and obviously very very good at what they do." - Naomi L.</p>
+
+					</header>
+				</article>
+			</div>
+			<div class="wrapper style2">
+				<article id="Megan">
+					<header>
+						<h2>Meet Megan Blunk</h2>
+						<p>Megan Blunk has been a veteranry technician for over 18 years.</p>
+						<p>She is the proud parent Levi the Basengi and felines Buddy and Jake</p>
 
 					</header>
 					<div class="container">
@@ -136,7 +174,7 @@
 					</header>
 					<div class="container">
 						<div class="row">
-							<div class="6u">
+							<div class="4u">
 								<section class="box style1">
 									<h3 style='text-align: left; color: #43B3E0'>House Call: $199</h3>
 									<p style='padding: 0px; margin: 0px; text-align: left; margin-left: 60px; font-weight: bold'>Includes:</p>
@@ -149,14 +187,40 @@
 									</ul>
 								</section>
 							</div>
-							<div class="6u">
+							<div class="4u">
+								<section class="box style1">
+									<h3 style='text-align: left; color: #43B3E0'>House Call: $199</h3>
+									<p style='padding: 0px; margin: 0px; text-align: left; margin-left: 60px; font-weight: bold'>Includes:</p>
+									<ul class='left check'>
+										<li>Physical exam</li>
+										<li>All vaccines</li>
+										<li>Ear cleaning</li>
+										<li>Nail clipping</li>
+										<li>Unlimited Q&A</li>
+									</ul>
+								</section>
+							</div>
+							<div class="4u">
+								<section class="box style1">
+									<h3 style='text-align: left; color: #43B3E0'>Diagnostics: Additional</h3>
+									<ul class='left check'>
+										<li>Fecal</li>
+										<li>Blood work</li>
+										<li>Urinalysis</li>
+										<li>Heartworm test</li>
+										<li>Skin cytology</li>
+										<li>Ear cytology</li>
+									</ul>
+								</section>
+							</div>
+							<div class="4u">
 								<section class="box style1">
 									<h3 style='text-align: left; color: #43B3E0'>Diagnostics: Additional cost</h3>
 									<ul class='left check'>
 										<li>Fecal</li>
 										<li>Blood work</li>
 										<li>Urinalysis</li>
-										<li>Blood pressure</li>
+										<li>Heartworm test</li>
 										<li>Skin cytology</li>
 										<li>Ear cytology</li>
 									</ul>
@@ -177,9 +241,9 @@
 					<div>
 						<div class="row">
 							<div class="12u" style='text-align: center'>
-								<p>Covering San Francisco, East Bay and Marin<p>
+								<p>Servicing San Francisco and the surrounding areas<p>
 								<p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p>
-								<p style='color: #84b123; font-weight: bold'>DocMarcia@MedranoVets.com</p>
+								<p style='color: #84b123; font-weight: bold'>contact@medvetsf.com</p>
 							</div>
 						</div>
 				</article>
