--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 					<div>
 						<div class="row">
 							<div class="12u" style='text-align: center'>
-								<p>Covering San Francisco, East Bay and Marin<p>
+								<p>Servicing San Francisco<p>
 								<p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p>
 								<p style='color: #84b123; font-weight: bold'>DocMarcia@MedranoVets.com</p>
 							</div>
