--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
 							<div class="3u">
 								<section class="box style1">
 									<h3>Schedule a visit</h3>
-									<p>Call or email to schedule a home visit.<br/><br/></p>
+									<p>Simply email, text, or call us to schedule a home visit.<br/><br/></p>
 								</section>
 							</div>
 							<div class="3u">
 								<section class="box style1">
 									<h3>We come to you</h3>
-									<p>Our vets treat your dog, play with toys and give belly rubs.</p>
+									<p>We assess, treat, and get to know your pet in the comfort of their own home.</p>
 								</section>
 							</div>
 							<div class="3u">
 								<section class="box style1">
 									<h3>Access records</h3>
-									<p>All of your records are readily available when you need them.</p>
+									<p>All previous and current medical records are available on the cloud when you need them.</p>
 								</section>
 							</div>
 							<div class="3u">
 								<section class="box style1">
 									<h3>Get reminders</h3>
-									<p>We'll let you know when your pup needs a checkup.<br/><br/></p>
+									<p>We'll let you know when it's time for a checkup.<br/><br/></p>
 								</section>
 							</div>
 						</div>
@@ -110,9 +110,9 @@
 			<div class="wrapper style2">
 				<article id="dr_marcia">
 					<header>
-						<h2>Meet Dr. Marcia, VMD</h2>
+						<h2>Meet Dr. Marcia, DVM</h2>
 						<p>Dr. Marcia graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
-						<p>She has over 6 years of experience and is the proud parent of Guille the Rat Terrier.</p>
+						<p>She has over 7 years of experience and is the proud parent of Lola the Tabby.</p>
 
 					</header>
 					<div class="container">
@@ -151,27 +151,28 @@
 						<div class="row">
 							<div class="6u">
 								<section class="box style1">
-									<h3 style='text-align: left; color: #43B3E0'>House Call: $199</h3>
+									<h3 style='text-align: left; color: #43B3E0'>House Call: $149</h3>
 									<p style='padding: 0px; margin: 0px; text-align: left; margin-left: 60px; font-weight: bold'>Includes:</p>
 									<ul class='left check'>
 										<li>Physical exam</li>
-										<li>All vaccines</li>
 										<li>Ear cleaning</li>
-										<li>Nail clipping</li>
+										<li>Nail trimming</li>
+										<li>Anal Gland expression (if needed)</li>
 										<li>Unlimited Q&A</li>
-									</ul>
+										<li>Follow-up communications</li>	
+										<li>$199 includes above plus any vaccinations</li>									</ul>
 								</section>
 							</div>
 							<div class="6u">
 								<section class="box style1">
 									<h3 style='text-align: left; color: #43B3E0'>Diagnostics: Additional cost</h3>
 									<ul class='left check'>
-										<li>Fecal</li>
-										<li>Blood work</li>
-										<li>Urinalysis</li>
-										<li>Blood pressure</li>
-										<li>Skin cytology</li>
-										<li>Ear cytology</li>
+										<li>Fecal testing</li>
+										<li>Heartworm testing</li>
+										<li>Comprehensive blood work</li>
+										<li>Urinalysis and culture</li>
+										<li>Skin / Ear cytology</li>
+										<li>Fine needle aspirates</li>
 									</ul>
 								</section>
 							</div>
