--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<div class="3u">
 								<section class="box style1">
 									<h3>Get reminders</h3>
-									<p>We'll let you know when it's time for a checkup.<br/><br/></p>
+									<p>We'll let you know when it's time for a checkup or when your pet is due for the next round of vaccines.<br/><br/></p>
 								</section>
 							</div>
 						</div>
