--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#how_it_works">How it Works</a></li>
-					<li><a href="#dr_marcia">Meet Dr. Marcia</a></li>
+					<li><a href="#dr_medrano">Meet Dr. Medrano</a></li>
 					<li><a href="#services">Our Services</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href='http://medranovets.vetsfirstchoice.com/'>Shop</a><li>
@@ -58,7 +58,7 @@
 						</div>
 						<div class="6u">
 							<header>
-								<h1><strong>Medrano Veterinary Services</strong></h1>
+								<h1><strong>Medrano Veterinary Inc.</strong></h1>
 							</header>
 							<p style='font-size: 1.75em'>Vet care without lifting a paw!</p>
 							<a href="#contact" class="button scrolly" style='margin-right: 10px'>Email Dr. Marcia</a>
