--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 			<div class="wrapper style2">
 				<article id="dr_marcia">
 					<header>
-						<h2>Meet Dr. Marcia, DVM</h2>
-						<p>Dr. Marcia graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
+						<h2>Meet Dr. Medrano, DVM</h2>
+						<p>Dr. Marcia Medrano graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
 						<p>She has over 7 years of experience and is the proud parent of Lola the Tabby.</p>
 
 					</header>
