--- a/index.html
+++ b/index.html
@@ -170,9 +170,11 @@
 										<li>Fecal testing</li>
 										<li>Heartworm testing</li>
 										<li>Comprehensive blood work</li>
-										<li>Urinalysis and culture</li>
-										<li>Skin / Ear cytology</li>
-										<li>Fine needle aspirates</li>
+										<li>Urinalysis</li>
+										<li>Urine culture and sensitivity</li>
+										<li>Ear cytology</li>
+										<li>Skin cytology</li>	
+										<li>Fine needle aspirates</li>										
 									</ul>
 								</section>
 							</div>
