--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
 		<!-- Portfolio -->
 			<div class="wrapper style2">
-				<article id="dr_marcia">
+				<article id="dr_medrano">
 					<header>
-						<h2>Meet Dr. Medrano, DVM</h2>
-						<p>Dr. Marcia Medrano graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
+						<h2>Meet Marcia Medrano, DVM</h2>
+						<p>Dr. Medrano graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
 						<p>She has over 7 years of experience and is the proud parent of Lola the Tabby.</p>
 
 					</header>
@@ -196,6 +196,7 @@
 								<p>Servicing San Francisco<p>
 								<p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p>
 								<p style='color: #84b123; font-weight: bold'>DocMarcia@MedranoVets.com</p>
+								<p style='color: #84b123; font-weight: bold'>Megan@MedranoVets.com</p>								
 							</div>
 						</div>
 				</article>
