--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<ul class="container">
 					<li><a href="#how_it_works">How it Works</a></li>
 					<li><a href="#dr_medrano">Meet Dr. Medrano</a></li>
-					<li><a href="#services">Our Services</a></li>
+					<li><a href="#services">Services</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href='http://medranovets.vetsfirstchoice.com/'>Shop</a><li>
 				</ul>
@@ -98,7 +98,7 @@
 							<div class="3u">
 								<section class="box style1">
 									<h3>Get reminders</h3>
-									<p>We'll let you know when it's time for a checkup or when your pet is due for vaccines.<br/><br/></p>
+									<p>We'll let you know when it's time for a checkup.<br/><br/></p>
 								</section>
 							</div>
 						</div>
