--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							</header>
 							<p style='font-size: 1.75em'>Vet care without lifting a paw!</p>
 							<a href="#contact" class="button scrolly" style='margin-right: 10px'>Email Us</a>
-							<a href="#contact" class="button green scrolly">Call MedranoVets</a>
+							<a href="#contact" class="button green scrolly">Call Us</a>
 
 						</div>
 					</div>
