--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="6u">
-							<span class="image fit"><img src="medvets.jpg" alt="" /></span>
+							<span class="image fit"><img src="image/medvets.jpg" alt="" /></span>
 						</div>
 						<div class="6u">
 							<header>
@@ -98,7 +98,7 @@
 							<div class="3u">
 								<section class="box style1">
 									<h3>Get reminders</h3>
-									<p>We'll let you know when it's time for a checkup.<br/><br/></p>
+									<p>We'll let you know when it's time for a checkup or when your pet is due for vaccines.<br/><br/></p>
 								</section>
 							</div>
 						</div>
