--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="6u">
-							<span class="image fit"><img src="image/medvets.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/medvets.JPG" alt="" /></span>
 						</div>
 						<div class="6u">
 							<header>
