--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 								<h1><strong>Medrano Veterinary Inc.</strong></h1>
 							</header>
 							<p style='font-size: 1.75em'>Vet care without lifting a paw!</p>
-							<a href="#contact" class="button scrolly" style='margin-right: 10px'>Email MedranoVets</a>
-							<a href="#contact" class="button green scrolly">Text or Call Us</a>
+							<a href="#contact" class="button scrolly" style='margin-right: 10px'>Email Us</a>
+							<a href="#contact" class="button green scrolly">Text/Call Us</a>
 
 						</div>
 					</div>
