--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 							</div>
 							<div class="4u">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/medrano1.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/medrano.jpg" alt="" /></a>
 								</article>
 							</div>
 							<div class="4u">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/medrano2.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/Marcia3.jpg" alt="" /></a>
 								</article>
 							</div>
 						</div>
