--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							</div>
 							<div class="4u">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/Marcia3.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/Marcia3 (1).jpg" alt="" /></a>
 								</article>
 							</div>
 						</div>
