--- a/index.html
+++ b/index.html
@@ -140,6 +140,41 @@
 					</header>
 				</article>
 			</div>
+		
+				<!-- Portfolio -->
+			<div class="wrapper style2">
+				<article id="dr_medrano">
+					<header>
+						<h2>Meet Megan Blunk</h2>
+						<p>Megan has over 17 years of experience as a veterinary technician with a background in emergency, surgery, and intensive care.</p>
+						<p>She is the proud parent of Levi the Basenji, and felines Buddy and Jake.</p>
+
+					</header>
+					<div class="container">
+						<div class="row">
+							<div class="4u">
+								<article class='box style2'>
+									<a href="#" class="image featured"><img src="images/Megan1.jpg" alt="" /></a>
+								</article>
+							</div>
+							<div class="4u">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/Megan2.jpg" alt="" /></a>
+								</article>
+							</div>
+							<div class="4u">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/Megan3.jpg" alt="" /></a>
+								</article>
+							</div>
+						</div>
+					</div>
+					<header>
+						<p style='padding: 0 30px; font-size: 1em; font-style: italic'> "Dr. Marcia and Megan were AMAZING!  Prompt, thorough, so loving and kind, and obviously very very good at what they do." - Naomi L.</p>
+
+					</header>
+				</article>
+			</div>
 
 			<!-- Services -->
 			<div class="wrapper style3">
