--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#how_it_works">How it Works</a></li>
-					<li><a href="#dr_medrano">Meet Dr. Medrano</a></li>
+					<li><a href="#dr_medrano">Meet Dr. Medrano and Megan</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href='http://medranovets.vetsfirstchoice.com/'>Shop</a><li>
