--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 							<div class="12u" style='text-align: center'>
 								<p>Servicing San Francisco<p>
 								<p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p>
-								<p style='color: #84b123; font-weight: bold'>DocMarcia@MedranoVets.com</p>
-								<p style='color: #84b123; font-weight: bold'>Megan@MedranoVets.com</p>								
+								<p style='color: #84b123; font-weight: bold'>contact@medvetsf.com</p>
+													
 							</div>
 						</div>
 				</article>
