--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 										<li>Comprehensive blood work</li>
 										<li>Urinalysis</li>
 										<li>Urine culture and sensitivity</li>
-										<li>Ear cytology</li>
-										<li>Skin cytology</li>	
-										<li>Fine needle aspirates</li>										
+										<li>Ear and skin cytology</li>
+										<li>Fine needle aspirates</li>	
+										<li>USDA health certificates</li>										
 									</ul>
 								</section>
 							</div>
