--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 					<li><a href="#services">Services</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href='http://medranovets.vetsfirstchoice.com/'>Shop</a><li>
+					<li><a href='https://www.yelp.com/biz/medranovets-san-francisco'>Yelp</a><li>
 				</ul>
 			</nav>
 
