--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						<div class="row">
 							<div class="6u">
 								<section class="box style1">
-									<h3 style='text-align: left; color: #43B3E0'>House Call: $149</h3>
+									<h3 style='text-align: left; color: #43B3E0'>House Call: $164</h3>
 									<p style='padding: 0px; margin: 0px; text-align: left; margin-left: 60px; font-weight: bold'>Includes:</p>
 									<ul class='left check'>
 										<li>Physical exam</li>
@@ -196,7 +196,7 @@
 										<li>Anal Gland expression (if needed)</li>
 										<li>Unlimited Q&A</li>
 										<li>Follow-up communications</li>	
-										<li>$199 includes above plus any vaccinations</li>									</ul>
+										<li>$199 includes above plus most vaccinations</li>									</ul>
 								</section>
 							</div>
 							<div class="6u">
