--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 										<li>Anal Gland expression (if needed)</li>
 										<li>Unlimited Q&A</li>
 										<li>Follow-up communications</li>	
-										<li>$199 includes above plus most vaccinations</li>									</ul>
+										<li>$199 includes above plus two vaccinations</li>									</ul>
 								</section>
 							</div>
 							<div class="6u">
