--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
 								<section class="box style1">
 									<h3 style='text-align: left; color: #43B3E0'>Diagnostics: Additional cost</h3>
 									<ul class='left check'>
+										<li>Additional vaccinations</li>
 										<li>Fecal testing</li>
 										<li>Heartworm testing</li>
 										<li>Comprehensive blood work</li>
-										<li>Urinalysis</li>
-										<li>Urine culture and sensitivity</li>
+										<li>Urinalysis and/or culture</li>
 										<li>Ear and skin cytology</li>
 										<li>Fine needle aspirates</li>	
 										<li>USDA health certificates</li>										
