Removed Megan's section and nav, clickable contact

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#how_it_works">   How it Works   </a></li>
-					<li><a href="#dr_medrano">   Meet Dr. Medrano and Megan   </a></li>
+					<li><a href="#dr_medrano">   Meet Dr. Medrano   </a></li>
 					<li><a href="#services">   Services   </a></li>
 					<li><a href="#contact">   Contact   </a></li>
 					<li><a href='https://www.yelp.com/biz/medranovets-san-francisco'>   Yelp   </a><li>
@@ -114,7 +114,7 @@
 					<header>
 						<h2>Meet Marcia Medrano, DVM</h2>
 						<p>Dr. Medrano graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
-						<p>She has over 7 years of experience and is the proud parent of Lola the Tabby.</p>
+						<p>She has over 11 years of experience and is the proud parent of Lola the Tabby.</p>
 
 					</header>
 					<div class="container">
@@ -142,40 +142,7 @@
 				</article>
 			</div>
 		
-				<!-- Portfolio -->
-			<div class="wrapper style2">
-				<article id="dr_medrano">
-					<header>
-						<h2>Meet Megan Blunk</h2>
-						<p>Megan has over 17 years of experience as a veterinary technician with a background in emergency, surgery, and intensive care.</p>
-						<p>She is the proud parent of Levi the Basenji, and felines Buddy and Jake.</p>
-
-					</header>
-					<div class="container">
-						<div class="row">
-							<div class="4u">
-								<article class='box style2'>
-									<a href="#" class="image featured"><img src="images/Megan 1.jpg" alt="" /></a>
-								</article>
-							</div>
-							<div class="4u">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/Megan 2.jpg" alt="" /></a>
-								</article>
-							</div>
-							<div class="4u">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/Megan 3.jpg" alt="" /></a>
-								</article>
-							</div>
-						</div>
-					</div>
-					<header>
-						<p style='padding: 0 30px; font-size: 1em; font-style: italic'> "Dr. Marcia and Megan were AMAZING!  Prompt, thorough, so loving and kind, and obviously very very good at what they do." - Naomi L.</p>
-
-					</header>
-				</article>
-			</div>
+			
 
 			<!-- Services -->
 			<div class="wrapper style3">
@@ -230,9 +197,8 @@
 						<div class="row">
 							<div class="12u" style='text-align: center'>
 								<p>Servicing San Francisco<p>
-								<p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p>
-								<p style='color: #84b123; font-weight: bold'>contact@medvetsf.com</p>
-													
+								<a href=tel:4155068387 style='text-decoration: none;'><p style='color: #43B3E0; font-weight: bold'>415.506.VETS</p></a>
+								<a href=mailto:contact@medvetsf.com style='text-decoration: none;'><p style='color: #84b123; font-weight: bold'>contact@medvetsf.com</p></a>
 							</div>
 						</div>
 				</article>
