added favicon and iOS home screen icon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <html>
 	<head>
 		<title>Medrano Veterinary Inc.</title>
+		<link rel="icon" type="image/png" href="images/favicon.png">
+		<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+		<meta name="apple-mobile-web-app-title" content="MedranoVets">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
