minor nav bar link fixes

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					<li><a href="#dr_medrano">   Meet Dr. Medrano   </a></li>
 					<li><a href="#services">   Services   </a></li>
 					<li><a href="#contact">   Contact   </a></li>
-					<li><a href='https://www.yelp.com/biz/medranovets-san-francisco'>   Yelp   </a><li>
-					<li><a href='http://medranovets.vetsfirstchoice.com/'>   Shop   </a><li>
+					<li><a href='https://www.yelp.com/biz/medranovets-san-francisco' target="_blank">   Yelp   </a><li>
+					<li><a href='https://medranovets.vetsfirstchoice.com/' target="_blank">   Shop   </a><li>
 			
 				</ul>
 			</nav>
