--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<header>
 						<h2>Meet Marcia Medrano, DVM</h2>
 						<p>Dr. Medrano graduated from St. George's University and completed her clinical year at the University of Pennsylvania.</p>
-						<p>She has over 11 years of experience and is the proud parent of Lola the Tabby.</p>
+						<p>She has over <span id="years_experience">15</span> years of experience and is the proud parent of Lola the Tabby.</p>
 
 					</header>
 					<div class="container">
@@ -221,6 +221,8 @@
 </html>
 
 <script>
+
+document.getElementById("years_experience").innerHTML = 2023 - 2008;
 
 $(".tracked").click(function(event) {
     var clickedEvent = this.getAttribute("data-event");
